--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: "idoTest"
+name: "otherTest"
 
 on:
   workflow_dispatch:
@@ -36,10 +36,14 @@ jobs:
    #       - engage-admin
 
     steps:
+    
 
       # Default env vars
       - name: Set env
-        run: echo "RELEASE_VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
+        with:
+          name: ${{github.ref_name}}
+          path: Release
+          run: echo "RELEASE_VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
       - name: Test
         run: |
           echo $RELEASE_VERSION
