--- a/.github/workflows/main2.yml
+++ b/.github/workflows/main2.yml
@@ -1,16 +1,33 @@
-name: "otherTest3"
+name: Release Workflow
+
 on:
   workflow_dispatch:
-    tags:
-      - 'v*.*.*'
+
 jobs:
-  test:
+  get-latest-release-tag:
     runs-on: ubuntu-latest
+
     steps:
-      - uses: actions/checkout@v2
-      - name: Set env
-        run: echo "RELEASE_VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
-      - name: Test
-        run: |
-          echo $RELEASE_VERSION
-          echo ${{ env.RELEASE_VERSION }}
+    - name: Checkout repository
+      uses: actions/checkout@v2
+
+    - name: Get latest release tag
+      id: get-tag
+      run: |
+        TAG=$(curl -s -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
+          https://api.github.com/repos/${{ github.repository }}/releases/latest \
+          | jq -r .tag_name)
+        echo "Latest release tag is $TAG"
+        echo "::set-output name=tag::$TAG"
+
+  your-other-job:
+    needs: get-latest-release-tag
+    runs-on: ubuntu-latest
+
+    steps:
+    - name: Checkout repository
+      uses: actions/checkout@v2
+
+    - name: Use the latest release tag
+      run: |
+        echo "Using latest release tag: ${{ needs.get-latest-release-tag.outputs.tag }}"
