--- a/.github/workflows/main2.yml
+++ b/.github/workflows/main2.yml
@@ -18,7 +18,7 @@ jobs:
           https://api.github.com/repos/${{ github.repository }}/releases/latest \
           | jq -r .tag_name)
         echo "Latest release tag is $TAG"
-        echo "::set-output name=tag::$TAG"
+        echo "$TAG"
 
   your-other-job:
     needs: get-latest-release-tag
