--- a/.github/workflows/main2.yml
+++ b/.github/workflows/main2.yml
@@ -20,6 +20,17 @@ jobs:
         echo "Latest release tag is $TAG"
         echo "$TAG"
 
+        if [[ "$TAG" =~ (test|staging|production)_([0-9]+\.[0-9]+\.[0-9]+) ]]; then
+          VERSION="${BASH_REMATCH[2]}"
+        else
+          echo "Failed to extract version from tag: $TAG"
+          exit 1
+        fi
+
+        echo "Latest release version is $VERSION"
+        echo "$VERSION"
+
+
   your-other-job:
     needs: get-latest-release-tag
     runs-on: ubuntu-latest
