--- a/.github/workflows/main2.yml
+++ b/.github/workflows/main2.yml
@@ -39,4 +39,4 @@ jobs:
 
     - name: Use the latest release version
       run: |
-        echo "Using latest release version: $RELEASE_VERSION"
+        echo "Using latest release version: $VERSION"
