--- a/.github/workflows/main2.yml
+++ b/.github/workflows/main2.yml
@@ -27,16 +27,23 @@ jobs:
         fi
 
         echo "Latest release version is $VERSION"
-        echo version="$VERSION" >> $GITHUB_ENV
+        echo "::set-output name=version::$VERSION"
 
-  your-other-job:
-    needs: get-latest-release-version
-    runs-on: ubuntu-latest
+        echo forced=$(if [[ ${{ github.ref_name }} == *-f ]]; then echo "true"; else echo "false"; fi) >> $GITHUB_ENV
 
-    steps:
-    - name: Checkout repository
-      uses: actions/checkout@v2
+        if [[ ${{ github.ref_name }} == test_* ]]; then
+          echo environment="test" >> $GITHUB_ENV
+          echo distId="E333ZBF8OB0KGL" >> $GITHUB_ENV
+          echo distUrl="https://d13imkh013nlqg.cloudfront.net" >> $GITHUB_ENV
 
-    - name: Use the latest release version
-      run: |
-        echo "Using latest release version: ${{ env.version }}"
+        elif [[ ${{ github.ref_name }} == staging_* ]]; then
+          echo environment="staging" >> $GITHUB_ENV
+          echo distId="E3DIJQC07QF41Q" >> $GITHUB_ENV
+          echo distUrl="https://d3tn5qru9slb7c.cloudfront.net" >> $GITHUB_ENV
+
+        elif [[ ${{ github.ref_name }} == production_* ]]; then
+          echo environment="production" >> $GITHUB_ENV
+          echo distId="E6TVK39UORE10" >> $GITHUB_ENV
+          echo distUrl="https://d34b54r33pmp3l.cloudfront.net" >> $GITHUB_ENV
+  
+        fi
