--- a/.github/workflows/main2.yml
+++ b/.github/workflows/main2.yml
@@ -2,6 +2,18 @@ name: Release Workflow
 
 on:
   workflow_dispatch:
+    branches:
+      - master
+      - develop
+      - IdoGvili-patch-1
+    inputs:
+      enviro:
+        type: choice
+        description: enviroment
+        options: 
+        - test
+        - staging
+        - production
 
 jobs:
   get-latest-release-version:
@@ -31,17 +43,17 @@ jobs:
 
         echo forced=$(if [[ ${{ github.ref_name }} == *-f ]]; then echo "true"; else echo "false"; fi) >> $GITHUB_ENV
 
-        if [[ ${{ github.ref_name }} == test_* ]]; then
+        if [[ ${{ github.event.inputs.enviro }} == test_* ]]; then
           echo environment="test" >> $GITHUB_ENV
           echo distId="E333ZBF8OB0KGL" >> $GITHUB_ENV
           echo distUrl="https://d13imkh013nlqg.cloudfront.net" >> $GITHUB_ENV
 
-        elif [[ ${{ github.ref_name }} == staging_* ]]; then
+        elif [[ ${{ github.event.inputs.enviro }} == staging_* ]]; then
           echo environment="staging" >> $GITHUB_ENV
           echo distId="E3DIJQC07QF41Q" >> $GITHUB_ENV
           echo distUrl="https://d3tn5qru9slb7c.cloudfront.net" >> $GITHUB_ENV
 
-        elif [[ ${{ github.ref_name }} == production_* ]]; then
+        elif [[ ${{ github.event.inputs.enviro }} == production_* ]]; then
           echo environment="production" >> $GITHUB_ENV
           echo distId="E6TVK39UORE10" >> $GITHUB_ENV
           echo distUrl="https://d34b54r33pmp3l.cloudfront.net" >> $GITHUB_ENV
