--- a/.github/workflows/main2.yml
+++ b/.github/workflows/main2.yml
@@ -9,6 +9,9 @@ jobs:
   create-release:
     runs-on: ubuntu-latest
 
+    env:
+      TAG_NAME: "v1.0.$(git rev-list --count HEAD)"
+
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v2
@@ -20,16 +23,17 @@ jobs:
 
       - name: Create Tag
         run: |
-          TAG_NAME="v1.0.$(git rev-list --count HEAD)"
           git tag $TAG_NAME -m "Version $TAG_NAME"
           git push origin $TAG_NAME --quiet --set-upstream
 
       - name: Create Release
         uses: actions/create-release@v1
         with:
-          tag_name: ${{ TAG_NAME }}
-          release_name: Release ${{ TAG_NAME }}
+          tag_name: ${{ env.TAG_NAME }}
+          release_name: Release ${{ env.TAG_NAME }}
           body: |
-            Release ${{ TAG_NAME }}
+            Release ${{ env.TAG_NAME }}
 
             Add release notes here.
+        env:
+          GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
