--- a/.github/workflows/ghRelease.yml
+++ b/.github/workflows/ghRelease.yml
@@ -1,9 +1,18 @@
 
 on:
-  push:
-    # Sequence of patterns matched against refs/tags
-    tags:
-      - 'v*' # Push events to matching v*, i.e. v1.0, v20.15.10
+  workflow_dispatch:
+    branches:
+      - master
+      - develop
+      - IdoGvili-patch-1
+    inputs:
+      enviro:
+        type: choice
+        description: enviroment
+        options: 
+        - test
+        - staging
+        - production
 
 name: Create Release
 
@@ -20,8 +29,8 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token is provided by Actions, you do not need to create your own token
         with:
-          tag_name: ${{ github.ref }}
-          release_name: Release ${{ github.ref }}
+          tag_name: stagingg
+          release_name: 2
           body: |
             Changes in this Release
             - First Change
