--- a/.github/workflows/ghRelease.yml
+++ b/.github/workflows/ghRelease.yml
@@ -29,8 +29,8 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token is provided by Actions, you do not need to create your own token
         with:
-          tag_name: stagingg
-          release_name: 2
+          tag_name: ${{ github.event.inputs.enviro }} _v2.2.1
+          release_name: ${{ github.event.inputs.enviro }} _v2.2.1
           body: |
             Changes in this Release
             - First Change
