--- a/.github/workflows/ghRelease.yml
+++ b/.github/workflows/ghRelease.yml
@@ -38,6 +38,7 @@ jobs:
           fi
   
           echo "Latest release version is $VERSION"
+          echo "VERSION=$VERSION" >> $GITHUB_OUTPUT
    
       - name: Create Release
         id: create_release
