--- a/.github/workflows/ghRelease.yml
+++ b/.github/workflows/ghRelease.yml
@@ -51,7 +51,7 @@ jobs:
           python3 - <<EOF
           import re
           
-          major, minor, patch = map(int, "${{ steps.get-version.outputs.VERSION }}".split('.'))
+          major, minor, patch = map(int, ${{ steps.get-version.outputs.VERSION }}.split('.'))
           minor += 1
           patch = 0
           echo minor
