--- a/.github/workflows/ghRelease.yml
+++ b/.github/workflows/ghRelease.yml
@@ -43,7 +43,7 @@ jobs:
       - name: Extract version components
         run: |
          
-          IFS='.' read -ra version_components <<< "${{ steps.inc-version.outputs.VERSION }}"
+          IFS='.' read -ra version_components <<< "${{ steps.get-version.outputs.VERSION }}"
           major=${version_components[0]}
           minor=${version_components[1]}
           patch=${version_components[2]}
@@ -59,8 +59,8 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          tag_name: ${{ github.event.inputs.enviro }}_${{ steps.inc-version.outputs.VERSION }}
-          release_name: ${{ github.event.inputs.enviro }}_${{ steps.inc-version.outputs.VERSION }}
+          tag_name: ${{ github.event.inputs.enviro }}_${{ steps.get-version.outputs.VERSION }}
+          release_name: ${{ github.event.inputs.enviro }}_${{ steps.get-version.outputs.VERSION }}
           body: |
             Changes in this Release
             - First Change
