--- a/.github/workflows/main_2.yml
+++ b/.github/workflows/main_2.yml
@@ -3,44 +3,58 @@ on:
     branches:
       - master
       - develop
+      
     inputs:
-      enviro:
-        type: choice
-        description: environment
-        options: 
-          - test
-          - staging
-          - production
-          - ALL
-
       in_tag:
-        description: 'release tag'
+        description: 'release version'
+        required: true
+        default: '1.0'
+      
+      enviro:
+        description: 'release enviroment'
         required: true
         default: '1.0'
 
-name: Create Release2
+name: Create-Release
 
 jobs:
   build:
-    name: Create Release2
+    name: Create-Release
     runs-on: ubuntu-latest
     steps:
     
-      - name: Create Release
-        id: create_release
+      - name: Create Not All Release
+        if: ${{ github.event.inputs.enviro != 'ALL' }}
+        id: create_notAll_release
         uses: actions/create-release@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          tag_name: ${{ github.event.inputs.enviro == 'ALL' ? 'test' : github.event.inputs.enviro }}_v${{ github.event.inputs.in_tag }}
-          release_name: ${{ github.event.inputs.enviro == 'ALL' ? 'test' : github.event.inputs.enviro }}_v${{ github.event.inputs.in_tag }}
+          tag_name: ${{ github.event.inputs.enviro }}_v${{ github.event.inputs.in_tag }}
+          release_name: ${{ github.event.inputs.enviro }}_v${{ github.event.inputs.in_tag }}
           body: |
             Changes in this Release
             - First Change
             - Second Change
           draft: false
           prerelease: false
-          
+
+      - name: Create Test Release
+        if: ${{ github.event.inputs.enviro == 'ALL' }}
+        id: create_test_release
+        uses: actions/create-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          tag_name: test${{ github.event.inputs.in_tag }}
+          release_name: test_v${{ github.event.inputs.in_tag }}
+          body: |
+            Changes in this Release
+            - First Change
+            - Second Change
+          draft: false
+          prerelease: false
+
       - name: Create Staging Release
         if: ${{ github.event.inputs.enviro == 'ALL' }}
         id: create_staging_release
