--- a/.github/workflows/main_2.yml
+++ b/.github/workflows/main_2.yml
@@ -11,7 +11,8 @@ on:
         options: 
           - test
           - staging
-          - production      
+          - production
+          - ALL
       in_tag:
         description: 'release version'
         required: true
